--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "analyze": "webpack-bundle-analyzer ./stats.json",
     "build": "webpack --env production --progress",
-    "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --open --hot --env development\""
+    "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --open --hot --env development\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -82,5 +84,7 @@
   "engines": {
     "node": ">=6.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
