--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,19 @@
+# EditorConfig - это замечательно: http://EditorConfig.org
+
+# Файл EditorConfig верхнего уровня
 root = true
 
-# General settings for whole project
+[*.md]
+trim_trailing_whitespace = false
+
+[*.js]
+trim_trailing_whitespace = true
+
+# Переводы строк в стиле Unix с пустой строкой в конце файла
 [*]
 indent_style = space
 indent_size = 2
 end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
 insert_final_newline = true
+max_line_length = 100
