--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "webpack-pug-scss-boiperplate",
-  "version": "2.1.3",
-  "description": "A webpack boilerplate for building web apps",
-  "main": "./app/scripts/index.js",
-  "author": "Alex Nozdriukhin",
+  "name": "toxin",
+  "version": "1.0.0",
+  "description": "hotel selection",
+  "main": "./app/index.js",
+  "author": "dywork",
   "license": "MIT",
   "scripts": {
     "analyze": "webpack-bundle-analyzer ./stats.json",
