--- a/.stylelintrc
+++ b/.stylelintrc
@@ -2,5 +2,8 @@
   "plugins": [
     "stylelint-scss"
   ],
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-standard",
+    "rules": {
+    "scss/dollar-variable-pattern": "global"
+  }
 }
