--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
   "runtime.js": "scripts/runtime.62a9165a.js",
   "about.js": "scripts/about.4c2da852.js",
-  "home.css": "styles/2.d2b12773.css",
-  "home.js": "scripts/home.97595526.js",
+  "home.css": "styles/2.058e8b7a.css",
+  "home.js": "scripts/home.65003576.js",
   "../stats.json": "../stats.json",
   "about/index.html": "about/index.html",
-  "fonts/main.scss": "fonts/open-sans-regular.9bd6fd3f.woff2",
+  "fonts/main.scss": "fonts/Montserrat-Regular.font.8f97bca3.svg",
+  "images/main.scss": "images/Montserrat-Regular.font.29723f7e.svg",
   "index.html": "index.html"
 }
