--- a/.stylelintignore
+++ b/.stylelintignore
@@ -1,3 +1,3 @@
 build/**/*.css
-app/styles/variables.scss
-app/styles/normolize.scss
+app/styles/utils/variables.scss
+app/styles/utils/normolize.scss
