--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "runtime.js": "scripts/runtime.62a9165a.js",
   "about.js": "scripts/about.4c2da852.js",
-  "home.css": "styles/2.102ec6d4.css",
-  "home.js": "scripts/home.071126fa.js",
+  "home.css": "styles/2.62618bb4.css",
+  "home.js": "scripts/home.a2b91ec1.js",
   "../stats.json": "../stats.json",
   "about/index.html": "about/index.html",
-  "fonts/main.scss": "fonts/Montserrat-Regular.font.8f97bca3.svg",
-  "images/main.scss": "images/Montserrat-Regular.font.29723f7e.svg",
+  "fonts/main.scss": "fonts/Quicksand-Regular.font.d95a4cf0.svg",
+  "images/main.scss": "images/Quicksand-Regular.font.f7cc3ce1.svg",
   "index.html": "index.html"
 }
