--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "runtime.js": "scripts/runtime.62a9165a.js",
   "about.js": "scripts/about.4c2da852.js",
-  "home.css": "styles/2.7ddb659d.css",
-  "home.js": "scripts/home.94cbaba9.js",
+  "home.css": "styles/2.89b405fa.css",
+  "home.js": "scripts/home.c50c770e.js",
   "../stats.json": "../stats.json",
   "about/index.html": "about/index.html",
   "fonts/main.scss": "fonts/Quicksand-Regular.font.d95a4cf0.svg",
-  "images/main.scss": "images/Quicksand-Regular.font.f7cc3ce1.svg",
+  "images/main.scss": "images/interior.c5e4db2b.jpg",
   "index.html": "index.html"
 }
