--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "analyze": "webpack-bundle-analyzer ./stats.json",
     "build": "webpack --env production --progress",
-    "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --open --hot --env development\"",
+    "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --host 192.168.0.103 --open --hot --env development\"",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
