--- a/package.json
+++ b/package.json
@@ -1,137 +1,39 @@
 {
-  "name": "toxin",
+  "name": "test",
   "version": "1.0.0",
-  "description": "hotel selection",
-  "main": "./app/index.js",
-  "author": "dywork",
-  "license": "MIT",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "analyze": "webpack-bundle-analyzer ./stats.json",
-    "build": "webpack --env production --progress",
-    "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --host 192.168.0.103 --open --hot --env development\"",
+    "start": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode production",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/alexnoz/webpack-pug-scss-boilerplate.git"
-  },
-  "keywords": [
-    "boilerplate",
-    "webpack",
-    "pug",
-    "jade",
-    "sass",
-    "scss"
-  ],
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "7.4.3",
-    "@babel/core": "7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/preset-env": "7.4.3",
-    "autoprefixer": "^9.5.1",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "clean-webpack-plugin": "^2.0.1",
-    "copy-webpack-plugin": "^5.0.2",
-    "css-loader": "^2.1.1",
-    "cssnano": "^4.1.10",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-jest-enzyme": "^7.0.2",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-compat": "^3.1.1",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jest": "^22.7.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-standard": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "fast-sass-loader": "^1.4.7",
-    "file-loader": "^3.0.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "glob": "^7.1.3",
-    "html-loader": "^0.5.1",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
+    "gh-pages": "^2.1.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.6.0",
-    "mini-css-extract-plugin": "0.6.0",
-    "node-sass": "4.11.0",
-    "nodemon": "^1.18.11",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^1.18.2",
+    "node-sass": "^4.13.0",
     "pug-html-loader": "^1.1.5",
-    "purify-css": "^1.2.5",
-    "purifycss-webpack": "^0.7.0",
-    "style-loader": "^0.23.1",
-    "stylelint": "^10.0.1",
-    "stylelint-config-htmlacademy": "^0.1.4",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^18.3.0",
-    "stylelint-order": "^3.0.1",
-    "stylelint-scss": "^3.5.4",
-    "stylelint-webpack-plugin": "^0.10.5",
-    "terser-webpack-plugin": "1.2.3",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.30.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "3.3.0",
-    "webpack-dev-server": "^3.3.1",
-    "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.2.1",
-    "webpack-stats-plugin": "0.2.1"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ],
-  "engines": {
-    "node": ">=6.0.0"
-  },
-  "stylelint": {
-    "extends": "stylelint-config-htmlacademy",
-    "plugins": [
-      "stylelint-order",
-      "stylelint-config-rational-order/plugin",
-      "stylelint-scss"
-    ],
-    "rules": {
-      "string-quotes": "single",
-      "order/properties-order": [],
-      "plugin/rational-order": [
-        true,
-        {
-          "border-in-box-model": false,
-          "empty-line-between-groups": false
-        }
-      ],
-      "scss/dollar-variable-pattern": "^foo",
-      "scss/selector-no-redundant-nesting-selector": true
-    }
-  },
-  "rules": {
-    "string-quotes": "single",
-    "order/properties-order": [],
-    "plugin/rational-order": [
-      true,
-      {
-        "border-in-box-model": false,
-        "empty-line-between-groups": false
-      }
-    ],
-    "scss/dollar-variable-pattern": "^foo",
-    "scss/selector-no-redundant-nesting-selector": true
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "gh-pages": "^2.0.1",
-    "inputmask": "^4.0.8",
-    "validator": "^11.1.0"
+    "inputmask": "^4.0.9",
+    "validator": "^12.0.0"
   }
 }
