--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
   "dependencies": {
     "inputmask": "^4.0.9",
     "validator": "^12.0.0"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
