--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "inputmask": "^4.0.9",
     "validator": "^12.1.0"
   },
