--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "FSD education program. The 2nd task",
   "private": true,
   "main": "index.js",
+  "homepage": "https://dywork.github.io/toxin",
   "scripts": {
     "start": "webpack-dev-server --open --hot --mode development",
     "build": "webpack --mode production",
