--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "chart.js": "^2.9.3",
     "inputmask": "^4.0.9",
     "nouislider": "^14.1.1",
