--- a/package.json
+++ b/package.json
@@ -26,11 +26,22 @@
     "gh-pages": "^2.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.0.6",
+    "lint-staged": "^9.5.0",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
+    "prettier": "^1.19.1",
     "pug-html-loader": "^1.1.5",
     "sass-loader": "^8.0.1",
     "style-loader": "^1.1.2",
+    "stylelint": "^12.0.1",
+    "stylelint-at-rule-no-children": "^0.3.1",
+    "stylelint-config-prettier": "^8.0.0",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.2.0",
+    "stylelint-media-use-custom-media": "^1.0.0",
+    "stylelint-order": "^4.0.0",
+    "stylelint-value-no-unknown-custom-properties": "^2.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
