--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "webpack-dev-server --open --hot --mode development",
     "build": "webpack --mode production",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "lint:css": "stylelint \"src/**/*.css\" --config ./.stylelintrc-format",
+    "format:css": "prettier --write \"src/**/*.css\" && stylelint \"src/**/*.css\" --fix --config ./.stylelintrc-format"
   },
   "keywords": [],
   "author": "",
