--- a/package.json
+++ b/package.json
@@ -56,6 +56,11 @@
     "validator": "^12.1.0",
     "wnumb": "^1.2.0"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions"
