--- a/.stylelintrc
+++ b/.stylelintrc
@@ -13,13 +13,13 @@
     "csstools/media-use-custom-media": [
       "known",
       {
-        "importFrom": ["src/styles/variables.css"]
+        "importFrom": ["src/styles/variables.scss"]
       }
     ],
     "csstools/value-no-unknown-custom-properties": [
       true,
       {
-        "importFrom": ["src/styles/variables.css"]
+        "importFrom": ["src/styles/variables.scss"]
       }
     ],
     "block-no-empty": true,
