--- a/package.json
+++ b/package.json
@@ -16,22 +16,29 @@
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.11.5",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.0",
     "css-loader": "^3.6.0",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
     "file-loader": "^4.3.0",
     "gh-pages": "^2.2.0",
+    "html-critical-webpack-plugin": "^2.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.3.0",
     "lint-staged": "^9.5.0",
+    "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^4.14.1",
+    "postcss-combine-media-query": "^1.0.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
-    "pug-html-loader": "^1.1.5",
+    "pug": "^3.0.0",
+    "pug-loader": "^2.4.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "stylelint": "^12.0.1",
@@ -44,7 +51,9 @@
     "stylelint-value-no-unknown-custom-properties": "^2.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-livereload-plugin": "^2.3.0",
+    "webpack-merge": "^5.4.0"
   },
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
