--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^1.19.1",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "stylelint": "^12.0.1",
